FIX: Vertical spacing in interlinear

--- a/components/interlinear/interlinear.less
+++ b/components/interlinear/interlinear.less
@@ -232,9 +232,10 @@
     display:             flex;
     flex-flow:           row wrap;
     list-style:          none;
-    margin:              0em;
+    margin-block:        var(--igl-vertical-spacing);
     margin-inline-start: var(--igl-indent);
     padding:             0em;
+    row-gap:             var(--igl-vertical-spacing);
   }
 
   .morpheme,
